# ai-swarm-intelligence

./: .gitignore  AGENTS.md  child.py  config.py  evolver.py  evolver.sh  flake.nix
.opencode/agents/: base_template.md  dct-evolver.md
base_code/: flake.nix
base_code/.opencode/: package-lock.json
base_code/src/: benchmark.py  build.sh  dct_engine.py  dct_engine_impl.c  test_debug  test_debug.c
base_code/src/jpeg_engine/: Cargo.toml
base_code/src/jpeg_engine/.cargo/: config.toml
base_code/src/jpeg_engine/src/: dct.rs  gpu.rs  header.rs  huffman.rs  idct.rs  lib.rs  scaling.rs
base_code/src/jpeg_engine/tests/: integration_test.rs
improvement_suggestions/: 01 - gpu_threshold_and_optimizations.md  02 - webgpu_wgsl_compute_shader.md  03 - heterogeneous computing.md
logs/: baseline_perf.data.old  benchmark_history.json  benchmark_history.md  current_gen.json
logs/archived_agents/: gen_1_winner.md  gen_2_winner.md  gen_3_winner.md  gen_4_winner.md  gen_5_winner.md  gen_6_winner.md
logs/archived_agents_dct_era/: gen_1_winner.md  gen_3_winner.md
logs/winners/gen_2/: analysis.md
src/: dct_engine.py
tests/: test_dct_engine.py
